objects/Account.object
<CustomObject>
    <fields>
        <fullName>UserSalesBusinessLine__c</fullName>
        <description>SFDC1-6544 : used to retrieve Sales Business Line from User record</description>
        <formula>TEXT($User.SalesBusinessLineglobalpicklist__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserSalesBusinessLine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VATTaxID__c</fullName>
        <description>SFDC1-563 The company&apos;s tax ID based on which country they are in. Will be populated from D&amp;B when available. Otherwise Sales Support will provide it to the Data Governance Team to update. Editable only by Data Governance and System Admin.</description>
        <inlineHelpText>Please enter account&apos;s VAT/Tax ID</inlineHelpText>
        <label>VAT/Tax ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCRestrictedPartyScreeningDate__c</fullName>
        <description>Date the Account was screened</description>
        <inlineHelpText>Date the Account was screened</inlineHelpText>
        <label>Restricted Party Screening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VCRestrictedPartyScreeningStatus__c</fullName>
        <description>Restricted Party Screening Status</description>
        <inlineHelpText>Restricted Party Screening Status</inlineHelpText>
        <label>Restricted Party Screening Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCRiskCountryStatus__c</fullName>
        <description>Sanctioned or Embargoed Country Indicator</description>
        <inlineHelpText>Sanctioned or Embargoed Country Indicator</inlineHelpText>
        <label>Risk Country Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCScreeningTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Either Manually or Programatically set to true for Account RPS Trigger to cause screening</description>
        <label>Screening Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blee_ID__c</fullName>
        <description>this is a test field added by Matt Henderson</description>
        <externalId>true</externalId>
        <label>zzzBlee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SNPCAPIQ__CapitalIQCompanyId_txt__c</field>
            <operation>contains</operation>
            <value>*</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccountsWaitingForValidation</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DataGovernanceStatus__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Accounts waiting for validation</label>
    </listViews>
    <listViews>
        <fullName>AllAccountswhereIamontheTeam</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>All Accounts where I am on the Team</label>
    </listViews>
    <listViews>
        <fullName>AllActiveAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>OpportunityCount__c</columns>
        <columns>OpenOpportunityCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>InactiveInvalid,InactiveOutOfBusiness</value>
        </filters>
        <label>All Inactive Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Approved</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DataGovernanceStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All Accounts Approved</label>
    </listViews>
    <listViews>
        <fullName>Cascade</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ComplianceRestriction__c</columns>
        <columns>ComplianceRestrictionException__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>cascade</value>
        </filters>
        <label>Cascade</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>GlobalUltimateAccount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Org_Account_Hierarchy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Relationship__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>AccountActiveContractsCount__c</columns>
        <columns>OpenOpportunityCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Account_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>VP_Securities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>VP  Securities</label>
    </listViews>
    <listViews>
        <fullName>whitney_test</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>whitney test</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AccountSubTypeValueRequired</fullName>
        <active>true</active>
        <description>SFDC1-4380 if &quot;Global Alliance&quot; is selected in the &quot;Account Type&quot; field the user is required to select a value from the &quot;Account Sub Type&quot; picklist.
SFDC1-10675:Change value from &quot;Global Alliance&quot; to &quot;Channel Partner&quot;.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISPICKVAL(Type, &apos;Channel Partner&apos;)
&amp;&amp; ISBLANK(AccountSubType__c)
)</errorConditionFormula>
        <errorDisplayField>AccountSubType__c</errorDisplayField>
        <errorMessage>Account Sub Type is required if Account Type is &quot;Channel Partner&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingAddressIsRequired</fullName>
        <active>true</active>
        <description>SFDC1-2235 validate Account&apos;s Billing Address and pop up error if it&apos;s missing</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISBLANK(BillingStreet)
|| ISBLANK(BillingCity)
|| ISBLANK(BillingCountry)
)</errorConditionFormula>
        <errorMessage>Account&apos;s address fields (Street, City and Country) are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BlockCreatingAccount</fullName>
        <active>true</active>
        <description>SFDC1-684 Restrict the creation of Accounts to System Admin and Data Governance.
SFDC1-10617 add logic to include Account Governance permission</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISNEW()
&amp;&amp; $Profile.Name &lt;&gt; &quot;IHSMarkit Data Governance&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; NOT($Permission.AccountGovernance)
)</errorConditionFormula>
        <errorMessage>Only Customer Master Data Team or System Administrator can create account. Please either select an existing account or request one from the Lead page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BlockNameUpdateForNonDataGovernance</fullName>
        <active>true</active>
        <description>SFDC1-2056 &amp; SFDC1-7981 Account Name and Status field should be locked down for all account, only Data Governance and System Admin should be able to edit these field.
SFDC1-10617 add logic to include Account Governance permission</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
(ISCHANGED(Name) || ISCHANGED(Status__c))
&amp;&amp; $Profile.Name &lt;&gt; &quot;IHSMarkit Data Governance&quot; 
&amp;&amp; $Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; NOT($Permission.AccountGovernance)
)</errorConditionFormula>
        <errorMessage>Only Customer Master Data Team and System Admin can edit Account Name and Status fields.Please either select an existing account or request one from the Lead page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BlockProhibitedCountry</fullName>
        <active>true</active>
        <description>SFDC1-383 Do not allow an Account record to be created if the Account&apos;s country is a Prohibited Country</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
NOT(CONTAINS($User.FirstName + &apos; &apos;+ $User.LastName, $Label.BatchAdminUserName)),
VLOOKUP( $ObjectType.Country__c.Fields.IsProhibited__c ,  $ObjectType.Country__c.Fields.Name ,  BillingCountry )
)
)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Due to U.S. export controls and sanctions restrictions, Account records cannot be created for the selected country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataGovernanceStatusApproved</fullName>
        <active>true</active>
        <description>SFDC1-2259 make sure Data Governance&apos;s required fields are populated before Account Governance Status could be changed to &apos;Approved&apos;.
SFDC1-8169 Website is no longer required because this data is not always provided.
SFDC1-8977 Rename Label</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISPICKVAL(DataGovernanceStatus__c, &quot;Approved&quot;)
&amp;&amp;
(
   ISPICKVAL(Type, &quot;&quot;)
|| ISPICKVAL(Priority__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>Account Type and Priority are required for Customer Master Data Status to be set to &quot;Approved&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataGovernanceStatusApprovedInactive</fullName>
        <active>true</active>
        <description>SFDC1-5259 prevents an account from having Account Governance Status of Approved and Account Status of &quot;Invalid Inactive&quot;. SFDC1-8977: Renaming Data Governance Status to Account Governance Status</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISPICKVAL(DataGovernanceStatus__c, &quot;Approved&quot;)
&amp;&amp;
(ISPICKVAL(Status__c, &quot;InactiveInvalid&quot;) || 
 ISPICKVAL(Status__c, &quot;InactiveLifecycle&quot;))
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Account record cannot have Customer Master Data Status of &quot;Approved&quot; if the Status is &quot;Inactive - Invalid&quot; and &quot;Inactive - Lifecycle&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExternalOrgTypeUpdatePermission</fullName>
        <active>true</active>
        <description>SFDC-2311 ExternalOrgType field editable by sales ops, system admin and Account Owner
SFDC-3534 Adding Data governance profile and removing Sales ops</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
    ISCHANGED(ExternalOrgType__c),
    $User.Id &lt;&gt; OwnerId,
    NOT(CONTAINS($Profile.Name, &quot;System Admin&quot;)),
    NOT(CONTAINS($Profile.Name, &quot;Data Governance&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>ExternalOrgType__c</errorDisplayField>
        <errorMessage>Only editable by data governance, system admin and Account Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InstitutionTypeRequired</fullName>
        <active>true</active>
        <description>SFDC-2311 &amp; 2312 Institution Type is required if External Org Type is selected</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISPICKVAL(ExternalOrgType__c, &apos;&apos;) = false
&amp;&amp; ISPICKVAL(InstitutionType__c, &apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>InstitutionType__c</errorDisplayField>
        <errorMessage>Institution Type is required if External Org Type is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InstitutionTypeSubTypeEditPermission</fullName>
        <active>true</active>
        <description>SFDC-2312 Instituion Type field editable by sales ops, system admin and Account Owner
SFDC-3534 Adding Data governance profile and removing Sales ops</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
    OR(
        ISCHANGED(InstitutionType__c),
        ISCHANGED(InstitutionSubType__c)
    ),
    $User.Id &lt;&gt; OwnerId,
    NOT(CONTAINS($Profile.Name, &quot;System Admin&quot;)),
    NOT(CONTAINS($Profile.Name, &quot;Data Governance&quot;))
)
)</errorConditionFormula>
        <errorMessage>Institution Type &amp; Institution Sub-Type fields editable by data governance, system admin and Account Owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateOfIncorporationIsRequiredForUS</fullName>
        <active>true</active>
        <description>SFDC1-4360 if &quot;United States&quot; is selected in the &quot;Incorporated In&quot; field then &quot;State of Incorporation&quot; is mandatory.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
IncorporatedIn__r.CountryCode__c = &apos;US&apos;
&amp;&amp; ISBLANK(TEXT(StateOfIncorporation__c))
)</errorConditionFormula>
        <errorDisplayField>IncorporatedIn__c</errorDisplayField>
        <errorMessage>If &quot;Incorporated In&quot; country is &quot;United States&quot;, please select &quot;State of Incorporation&quot; as it is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidatedAccountFields</fullName>
        <active>true</active>
        <description>Once validated (DataGovernanceStatus = &quot;Approved&quot;), all account fields except &quot;Description&quot; and &quot;Formerly Known As&quot; are only editable by Data Governance or System Administrator.</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.Account__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
ISPICKVAL(DataGovernanceStatus__c, &quot;Approved&quot;)
&amp;&amp; $Profile.Name &lt;&gt; &quot;IHSMarkit Data Governance&quot; 
&amp;&amp; $Profile.Name &lt;&gt; &quot;IHSMarkit System Admin&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; NOT(CONTAINS($Profile.Name,&apos;IHSMarkit Legal&apos;))
&amp;&amp; NOT($Permission.AccountGovernance)
&amp;&amp; NOT($User.Alias = &quot;autocln&quot;) &amp;&amp;
(ISCHANGED(AlternateNameTradingName__c)
|| ISCHANGED(Status__c)
|| ISCHANGED(VATTaxID__c)
)
)</errorConditionFormula>
        <errorMessage>Only Customer Master Data Team and System Admin can edit an Account. Please click the Account Assistance button for help from the Customer Master Data Team.</errorMessage>
    </validationRules>
</CustomObject>